tests/ternary/valid/assign_ternary.amu
main() : s32 {
    a:s32 = 0;
    a = if(1) 2 else 3;
    return a;
}