tests/ternary/invalid/incomplete_ternary.amu
main() : s32 {
    return if(1) else:2;
}